[gd_scene load_steps=5 format=3 uid="uid://c0q6vx2i5hoaw"]

[ext_resource type="Texture2D" uid="uid://cwl6e5mcoxjx5" path="res://assets/experience_gem.png" id="1_brv8q"]
[ext_resource type="Script" path="res://scripts/experience_gem.gd" id="1_fxl5l"]

[sub_resource type="CircleShape2D" id="CircleShape2D_erfk8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mj7ql"]

[node name="ExperienceGem" type="RigidBody2D"]
collision_layer = 8
script = ExtResource("1_fxl5l")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_brv8q")

[node name="AccelerationTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="ColliderShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_erfk8")

[node name="ExperiencePickupRadius" type="Area2D" parent="."]
collision_layer = 0

[node name="ExperiencePickupShape" type="CollisionShape2D" parent="ExperiencePickupRadius"]
shape = SubResource("CircleShape2D_mj7ql")

[connection signal="timeout" from="AccelerationTimer" to="." method="_on_acceleration_timer_timeout"]
[connection signal="body_entered" from="ExperiencePickupRadius" to="." method="_on_experience_pickup_radius_body_entered"]
